[package]
name = "adafruit_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4.23"
colored = "2.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"